[gd_scene load_steps=3 format=3 uid="uid://3wfrml4w0xw6"]

[ext_resource type="Script" uid="uid://70hke82luifd" path="res://scenes/Entity/Player/PlayerComponents/WeaponManager.gd" id="1_uw2o2"]
[ext_resource type="PackedScene" uid="uid://cqyhfjy01x2ua" path="res://scenes/Weapons/pistol.tscn" id="2_7h1kv"]

[node name="WeaponManager" type="Node3D"]
script = ExtResource("1_uw2o2")

[node name="ShootRaycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35893, 0)
target_position = Vector3(0, 0, 5.14)
hit_from_inside = true

[node name="WeaponList" type="Node3D" parent="."]

[node name="Pistol" parent="WeaponList" instance=ExtResource("2_7h1kv")]
